2005-12-08 Max Horváth <max.horvath@maxspot.de>
	* added FCKeditor to the supported libraries
	* added new content type: HTMLeditor
	* added new caching class which uses PEAR::Cache_Lite - must be enabled in config.php
	* HTMLeditor is the first class using the new caching class
	* removed unused function from content type Langstring
	* beautified and reorganized config.php and added a new switch for the caching class

2005-12-06 Max Horváth <max.horvath@maxspot.de>
	* fixed SQL bug when calling the "report configuration" page as a node owner

2005-12-05 François Proulx <francois.proulx@gmail.com>
	* Crunched the Google Maps Div block for better display on small screens

2005-12-05 Max Horváth <max.horvath@maxspot.de>
	* fixed bug when calling the preview version of a login page

2005-11-30 Benoit Grégoire  <bock@step.polymtl.ca>
	* User.php: Fix a bug in the sql query in isUserValid().  Checked that the change works with postgresql 7.4 and 8.
	It is still not understood why ISF doesn't encounter this bug on it's production server.

2005-11-28 François Proulx <francois.proulx@gmail.com>
	* Improved Flickr user output
	* Mostly completed Flickr admin UI
	* Changed display algorithm to display sequentially

2005-11-25 Rob Janes <janes.rob@gmail.com>
	* EventLogging class initial checkin

2005-11-14 Max Horváth <max.horvath@maxspot.de>
	* fixed path to included classes
	  Guys, please check the paths to included files twice next time you're
	  moving files

2005-11-12 François Proulx <francois.proulx@gmail.com>
	* Fixed schema 33 update
	* fixed css

2005-11-11 François Proulx <francois.proulx@gmail.com>
	* Fixed Admin hotspot location map
	* Take note : Google Maps updated their API key system, so that you simply need to register a key for the whole domain.
	  ie. one key for http://auth.abc.org will work even in sub-directories
	* Changed the Content classes structure to make them "pluggable" more easily.
	  as requested during last developpers meeting